--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+/* Reset the whole website */
+body {
+  margin: 0;
+  font-family: 'Arial', sans-serif;
+}
+
 /* Sticky header */
 .header {
     position: sticky;
@@ -85,41 +91,62 @@ button {
 .watchlist-btn:hover {
     background-color: #e65c00;
 }
-/* Navbar Styles */
-.navbar {
-  background-color: #222;
-  color: white;
+
+/* Navbar styling */
+nav {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
+  background-color: #de8484; 
   padding: 10px 20px;
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
 }
 
-.navbar .logo {
-  font-family: fantasy;
-  font-size: 22px;
-  font-weight: bold;
-  color: #ff6600;
-  text-decoration: none;
+.logo-container {
+  display: flex;
+  align-items: center;
 }
 
-.navbar .nav-right {
+.logo {
+  height: 50px;
+  width: auto;
+  margin-right: 10px;
+}
+
+.icon {
+  height: 40px;
+  width: auto;
+}
+
+/* Navigation links */
+.nav-links {
+  list-style-position:inside;
   display: flex;
   gap: 20px;
+  margin: 0;
 }
 
-.navbar .nav-link {
-  color: white;
+.nav-links li a {
   text-decoration: none;
-  font-weight: 500;
+  color: #fff;
+  font-weight: bold;
   transition: color 0.3s;
 }
 
-.navbar .nav-link:hover {
-  color: #ff6600;
+.nav-links li a:hover {
+  color: #F68352; 
 }
+
+nav a {
+  text-decoration: none; 
+  color: inherit;         
+}
+
+a:visited {
+  color: inherit;     
+}
+
+a:hover {
+  color: red;       
+}
+
 
