--- a/css/style.css
+++ b/css/style.css
@@ -157,4 +157,19 @@ a:hover {
   color: red;       
 }
 
+.certification-block {
+  background-color: #f9f9f9;
+  padding: 10px;
+  border-left: 4px solid #c34c00;
+  margin: 10px 0;
+  border-radius: 6px;
+}
 
+.certification-block p {
+  margin: 4px 0;
+}
+
+.cert-meaning {
+  font-size: 0.9em;
+  color: #444;
+}
