--- a/css/style.css
+++ b/css/style.css
@@ -173,3 +173,16 @@ a:hover {
   font-size: 0.9em;
   color: #444;
 }
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+  white-space: nowrap;
+  border: 0;
+}
+
