Updated Security faults

--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #4151c6; 
+  background-color: #b75c5c; 
   padding: 10px 20px;
 }
 
